--- a/css/layout.css
+++ b/css/layout.css
@@ -64,9 +64,20 @@ img { width: 100%;}
 #nav ul li:first-child,
 #nav ul li:nth-child(7) { border-left: none;}
 #nav ul li:nth-child(n+7) { border-bottom: none;}
-#nav ul li a { display: flex; align-items: center; justify-content: center; width: 100%; height: 3.917rem; font-size: 1.167rem; color: #C1ACFF; background: #32197B;}
+#nav ul li a { display: flex; align-items: center; justify-content: center; position: relative; width: 100%; height: 3.917rem; font-size: 1.167rem; color: #C1ACFF; background: #32197B;}
+#nav ul li:first-child a { color: #FDFF8C;}
 #nav ul li a .star-icon { width: .712rem; height: .681rem; margin-bottom: 1rem;}
 #nav ul li a .adult-icon { width: 1.083rem; height: 1.083rem; margin-right: .167rem; background: url(../img/adult-19.png) no-repeat center; background-size: 100% 100%;}
+#nav ul li a.on { color: #FFFFFF;}
+#nav ul li a.on::after { content: ""; position: absolute; left: 0; bottom: 0; display: block; width: 100%; height: 0.25rem; background: #FFFFFF;}
+
+#subNav { padding: 1.1667rem 0.6667rem; background: #F5F5F5;}
+#subNav ul { display: flex; flex-wrap: wrap;}
+#subNav ul li { width: 25%; margin-top: 0.8333rem;}
+#subNav ul li:nth-child(-n+4) { margin-top: 0;}
+#subNav ul li a { display: flex; align-items: center; justify-content: center; width: 100%; padding: 0.0833rem 0 0.25rem; font-size: 1.0833rem; font-weight: 500; line-height: 1.5833rem; color: #666666; border-radius: 1rem;}
+#subNav ul li a.on { background: #6435E9; color: #FFFFFF;}
+#subNav ul li a .adult-icon { width: 1.083rem; height: 1.083rem; margin-right: .167rem; background: url(../img/adult-19.png) no-repeat center; background-size: 100% 100%;}
 
 #sideMenu { position: fixed; top: 0; left: -85.3%; display: flex; flex-direction: column; width: 85.3%; height: 100%; padding-top: 4.5rem; background: #FFFFFF; z-index: 10; transition: left .2s ease;}
 .side-cover { position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0); z-index: 9; transition: background .2s ease; pointer-events: none;}
@@ -136,6 +147,11 @@ body.open .side-cover { background-color: rgba(0, 0, 0, 0.4); pointer-events: au
 /* title-area */
 .contents .title-area { display: flex; align-items: center; padding: 1.25rem 1.6667rem 0;}
 .contents .title-area h2 { font-size: 1.5rem; font-weight: 700; line-height: 2.1667rem; color: #202020;}
+.contents .title-area .filter-check input { display: none;}
+.contents .title-area .filter-check label { display: flex; align-items: center; justify-content: center; border: 1px solid #D0D0D0; border-radius: 0.1667rem; padding: 0.6667rem 1rem; font-size: 1.1667rem; line-height: 1.6667rem; color: #404040; cursor: pointer;}
+.contents .title-area .filter-check label i.icon { width: 1.6667rem; height: 1.4167rem; background: url(../img/ic_filter_check.png) no-repeat center; margin-right: 0.25rem;}
+.contents .title-area .filter-check input:checked + label { border-color: #562BD1; color: #562BD1;}
+.contents .title-area .filter-check input:checked + label i.icon { background: url(../img/ic_filter_check_on.png) no-repeat center;}
 .contents .title-area .type-check { display: flex; align-items: center; margin-left: auto;}
 .contents .title-area .type-check input { display: none;}
 .contents .title-area .type-check label { width: 3rem; height: 3rem; cursor: pointer;}
