--- a/css/layout.css
+++ b/css/layout.css
@@ -163,7 +163,7 @@ body.open .side-cover { background-color: rgba(0, 0, 0, 0.4); pointer-events: au
 /* list */
 .contents .lists-box { padding-bottom: 4.167rem;}
 .contents .lists-box ul.lists { display: flex; flex-direction: column;}
-.contents .lists-box ul.lists li { display: flex; align-items: center; height: 7.833rem; padding: 0.8333rem 1.6667rem; border-bottom: 1px solid #F5F5F5;}
+.contents .lists-box ul.lists li a { display: flex; align-items: center; height: 7.833rem; padding: 0.8333rem 1.6667rem; border-bottom: 1px solid #F5F5F5;}
 .contents .lists-box ul.lists li .img { position: relative; flex: 0 0 32%; height: 6.167rem; border-radius: 0.4167rem; overflow: hidden;}
 .contents .lists-box ul.lists li .img img { width: 100%; height: 100%;}
 .contents .lists-box ul.lists li .img .adult-box { position: absolute; top: 0; left: 0; display: none; width: 100%; height: 100%; background: url(../img/list-adult-text.png) no-repeat center rgba(86, 43, 209, .9); background-size: 19%;}
@@ -175,13 +175,14 @@ body.open .side-cover { background-color: rgba(0, 0, 0, 0.4); pointer-events: au
 .contents .lists-box ul.lists li .cate { font-size: 1rem; line-height: 1.4167rem; color: #ABABAB;}
 .contents .lists-box ul.lists li .point { font-size: 1rem; line-height: 1.4167rem; color: #7348F0; margin-left: auto;}
 .contents .lists-box .more-btn { display: flex; align-items: center; justify-content: center; margin: 2.0833rem auto 0; width: 25%; height: 3.3333rem; font-size: 1.1667rem; font-weight: 500; color: #404040; background: #F5F5F5; border-radius: 1.6667rem;}
-.contents .lists-box .more-btn i { width: 1rem; height: 1rem; background: url(../img/more-plus.png) no-repeat center; background-size: 100%;}
+.contents .lists-box .more-btn i { margin-left: 0.4167rem; width: 1rem; height: 1rem; background: url(../img/more-plus.png) no-repeat center; background-size: 100%;}
 
 .contents .lists-box.gallery-type ul.lists { flex-wrap: wrap; flex-direction: row; padding: 0 1.6667rem;}
-.contents .lists-box.gallery-type ul.lists li { position: relative; flex-direction: column; border: none; width: calc((100% - 0.8333rem) / 2); height: auto; padding: 0; margin: 2.0833rem 0.8333rem 0 0;}
+.contents .lists-box.gallery-type ul.lists li { position: relative;  border: none; width: calc((100% - 0.8333rem) / 2); margin: 2.0833rem 0.8333rem 0 0;}
 .contents .lists-box.gallery-type ul.lists li:nth-child(2n) { margin-right: 0;}
 .contents .lists-box.gallery-type ul.lists li:nth-child(1),
 .contents .lists-box.gallery-type ul.lists li:nth-child(2) { margin-top: 0.8333rem;}
+.contents .lists-box.gallery-type ul.lists li a { flex-direction: column; height: auto; border: none; padding: 0;}
 .contents .lists-box.gallery-type ul.lists li .info { width: 100%; height: 5.833rem; padding: 0;}
 .contents .lists-box.gallery-type ul.lists li .img { flex: 0 0 auto; width: 100%; height: 8.333rem; border-radius: 0.4167rem;}
 .contents .lists-box.gallery-type ul.lists li .img .adult-box { background-image: url(../img/gallery-adult-text.png);}
