--- a/css/layout.css
+++ b/css/layout.css
@@ -161,37 +161,36 @@ body.open .side-cover { background-color: rgba(0, 0, 0, 0.4); pointer-events: au
 .contents .title-area .type-check input:checked + label.gallery { background: url(../img/ic_gallery_on.png) no-repeat center; background-size: 100%;}
 
 /* list */
-.contents .lists-box { padding-bottom: 4.167rem;}
-.contents .lists-box ul.lists { display: flex; flex-direction: column;}
-.contents .lists-box ul.lists li a { display: flex; align-items: center; height: 7.833rem; padding: 0.8333rem 1.6667rem; border-bottom: 1px solid #F5F5F5;}
-.contents .lists-box ul.lists li .img { position: relative; flex: 0 0 32%; height: 6.167rem; border-radius: 0.4167rem; overflow: hidden;}
-.contents .lists-box ul.lists li .img img { width: 100%; height: 100%;}
-.contents .lists-box ul.lists li .img .adult-box { position: absolute; top: 0; left: 0; display: none; width: 100%; height: 100%; background: url(../img/list-adult-text.png) no-repeat center rgba(86, 43, 209, .9); background-size: 19%;}
-.contents .lists-box ul.lists li .info { display: flex; flex-direction: column; width: 68%; height: 100%; padding-left: 1rem;}
-.contents .lists-box ul.lists li .title { display: flex; align-items: center; font-size: 1.0833rem; font-weight: 500; color: #404040;}
-.contents .lists-box ul.lists li .title p { display: -webkit-box; overflow: hidden; text-overflow: ellipsis;word-wrap:break-word; -webkit-line-clamp: 3; -webkit-box-orient: vertical;}
-.contents .lists-box ul.lists li .title .icon-adult { display: none; width: 1.0833rem; height: 1.0833rem; vertical-align: middle; background: url(../img/adult-19.png) no-repeat center; background-size: 100%; margin-right: .5rem;}
-.contents .lists-box ul.lists li .etc { display: flex; align-items: center; margin-top: auto; padding-bottom: .3333rem;}
-.contents .lists-box ul.lists li .cate { font-size: 1rem; line-height: 1.4167rem; color: #ABABAB;}
-.contents .lists-box ul.lists li .point { font-size: 1rem; line-height: 1.4167rem; color: #7348F0; margin-left: auto;}
-.contents .lists-box .more-btn { display: flex; align-items: center; justify-content: center; margin: 2.0833rem auto 0; width: 25%; height: 3.3333rem; font-size: 1.1667rem; font-weight: 500; color: #404040; background: #F5F5F5; border-radius: 1.6667rem;}
-.contents .lists-box .more-btn i { margin-left: 0.4167rem; width: 1rem; height: 1rem; background: url(../img/more-plus.png) no-repeat center; background-size: 100%;}
+.lists-box ul.lists { display: flex; flex-direction: column;}
+.lists-box ul.lists li a { display: flex; align-items: center; height: 7.833rem; padding: 0.8333rem 1.6667rem; border-bottom: 1px solid #F5F5F5;}
+.lists-box ul.lists li .img { position: relative; flex: 0 0 32%; height: 6.167rem; border-radius: 0.4167rem; overflow: hidden;}
+.lists-box ul.lists li .img img { width: 100%; height: 100%;}
+.lists-box ul.lists li .img .adult-box { position: absolute; top: 0; left: 0; display: none; width: 100%; height: 100%; background: url(../img/list-adult-text.png) no-repeat center rgba(86, 43, 209, .9); background-size: 19%;}
+.lists-box ul.lists li .info { display: flex; flex-direction: column; width: 68%; height: 100%; padding-left: 1rem;}
+.lists-box ul.lists li .title { display: flex; align-items: center; font-size: 1.0833rem; font-weight: 500; color: #404040;}
+.lists-box ul.lists li .title p { display: -webkit-box; overflow: hidden; text-overflow: ellipsis;word-wrap:break-word; -webkit-line-clamp: 3; -webkit-box-orient: vertical;}
+.lists-box ul.lists li .title .icon-adult { display: none; width: 1.0833rem; height: 1.0833rem; vertical-align: middle; background: url(../img/adult-19.png) no-repeat center; background-size: 100%; margin-right: .5rem;}
+.lists-box ul.lists li .etc { display: flex; align-items: center; margin-top: auto; padding-bottom: .3333rem;}
+.lists-box ul.lists li .cate { font-size: 1rem; line-height: 1.4167rem; color: #ABABAB;}
+.lists-box ul.lists li .point { font-size: 1rem; line-height: 1.4167rem; color: #7348F0; margin-left: auto;}
+.lists-box .more-btn { display: flex; align-items: center; justify-content: center; margin: 2.0833rem auto 0; width: 25%; height: 3.3333rem; font-size: 1.1667rem; font-weight: 500; color: #404040; background: #F5F5F5; border-radius: 1.6667rem;}
+.lists-box .more-btn i { margin-left: 0.4167rem; width: 1rem; height: 1rem; background: url(../img/more-plus.png) no-repeat center; background-size: 100%;}
 
-.contents .lists-box.gallery-type ul.lists { flex-wrap: wrap; flex-direction: row; padding: 0 1.6667rem;}
-.contents .lists-box.gallery-type ul.lists li { position: relative;  border: none; width: calc((100% - 0.8333rem) / 2); margin: 2.0833rem 0.8333rem 0 0;}
-.contents .lists-box.gallery-type ul.lists li:nth-child(2n) { margin-right: 0;}
-.contents .lists-box.gallery-type ul.lists li:nth-child(1),
-.contents .lists-box.gallery-type ul.lists li:nth-child(2) { margin-top: 0.8333rem;}
-.contents .lists-box.gallery-type ul.lists li a { flex-direction: column; height: auto; border: none; padding: 0;}
-.contents .lists-box.gallery-type ul.lists li .info { width: 100%; height: 5.833rem; padding: 0;}
-.contents .lists-box.gallery-type ul.lists li .img { flex: 0 0 auto; width: 100%; height: 8.333rem; border-radius: 0.4167rem;}
-.contents .lists-box.gallery-type ul.lists li .img .adult-box { background-image: url(../img/gallery-adult-text.png);}
-.contents .lists-box.gallery-type ul.lists li .title { width: 100%; margin: 0.8333rem 0 0.4167rem;}
-.contents .lists-box.gallery-type ul.lists li .title p { -webkit-line-clamp:2;}
-.contents .lists-box.gallery-type ul.lists li .etc { margin-top: 0; padding-bottom: 0;}
+.lists-box.gallery-type ul.lists { flex-wrap: wrap; flex-direction: row; padding: 0 1.6667rem;}
+.lists-box.gallery-type ul.lists li { position: relative;  border: none; width: calc((100% - 0.8333rem) / 2); margin: 2.0833rem 0.8333rem 0 0;}
+.lists-box.gallery-type ul.lists li:nth-child(2n) { margin-right: 0;}
+.lists-box.gallery-type ul.lists li:nth-child(1),
+.lists-box.gallery-type ul.lists li:nth-child(2) { margin-top: 0.8333rem;}
+.lists-box.gallery-type ul.lists li a { flex-direction: column; height: auto; border: none; padding: 0;}
+.lists-box.gallery-type ul.lists li .info { width: 100%; height: 5.833rem; padding: 0;}
+.lists-box.gallery-type ul.lists li .img { flex: 0 0 auto; width: 100%; height: 8.333rem; border-radius: 0.4167rem;}
+.lists-box.gallery-type ul.lists li .img .adult-box { background-image: url(../img/gallery-adult-text.png);}
+.lists-box.gallery-type ul.lists li .title { width: 100%; margin: 0.8333rem 0 0.4167rem;}
+.lists-box.gallery-type ul.lists li .title p { -webkit-line-clamp:2;}
+.lists-box.gallery-type ul.lists li .etc { margin-top: 0; padding-bottom: 0;}
 
-.contents .lists-box ul.lists li.adult .adult-box { display: block;}
-.contents .lists-box ul.lists li.adult .icon-adult { display: inline-block;}
+.lists-box ul.lists li.adult .adult-box { display: block;}
+.lists-box ul.lists li.adult .icon-adult { display: inline-block;}
 
 /* tab-menu */
 .tab-menu ul { display: flex; align-items: center; width: 100%;}
@@ -212,3 +211,12 @@ input::placeholder { color: #A8A8A8;}
 .checkbox label::before { content: ""; position: absolute; top: 0; left: 0; display: block; width: 1.6667rem; height: 1.6667rem; background: url(../img/check.png) no-repeat center; background-size: 100%; border-radius: 3px;}
 .checkbox input[type="checkbox"] { display: none;}
 .checkbox input[type="checkbox"]:checked + label::before { background: url(../img/check-on.png) no-repeat center; background-size: 100%;}
+
+/* paging */
+.paging-container { display: flex; justify-content: center; width: 100%;}
+.paging-container .paging-box { display: flex; align-items: center;}
+.paging-container .paging-box a { display: flex; align-items: center; justify-content: center; width: 2.5rem; height: 2.5rem; font-family: 'Open Sans';font-size: 1.1667rem; line-height: 1.5833rem; color: #888888; margin: 0 0.5rem; background: #F5F5F5; border-radius: 50%;}
+.paging-container .paging-box a.on { color: #FFFFFF; background: #404040;}
+.paging-container .paging-box a.prev,
+.paging-container .paging-box a.next {  background: url(../img/icon-paging-on.png) no-repeat center #F5F5F5;}
+.paging-container .paging-box a.prev { transform: rotate(180deg);}
