--- a/css/sub.css
+++ b/css/sub.css
@@ -252,6 +252,50 @@
 #container.inquiry .inquiry-list li.inquiry-item a .state { display: flex; align-items: center; justify-content: center; width: 4.167rem; height: 4.167rem; font-size: 1rem; line-height: 1.4167rem; color: #666666; background: #E3E3E3; border-radius: 2.0833rem;}
 #container.inquiry .inquiry-list li.inquiry-item a .state.cmp { color: #FFFFFF; background: #00C2B6;}
 
+#container.inquiry .inquiry-type { display: flex; flex-wrap: wrap; margin-bottom: 2.0833rem;}
+#container.inquiry .inquiry-type button { width: calc(50% - 0.5833rem); height: 3.75rem; font-size: 1.1667rem; line-height: 1.6667rem; color: #888888; background: #F5F5F5; border: 1px solid #E3E3E3; border-radius: 0.3333rem;}
+#container.inquiry .inquiry-type button.on { color: #562BD1; border: 2px solid #6435E9; background-color: #FFFFFF;}
+#container.inquiry .inquiry-type button:nth-child(2n) { margin-left: 0.5833rem;}
+#container.inquiry .inquiry-type button:nth-child(n+3) { margin-top: 0.75rem;}
+#container.inquiry .radio-item { display: flex; align-items: center; flex-wrap: wrap; margin-bottom: 0.75rem;}
+#container.inquiry .radio-item .title { flex: 0 0 100%; font-size: 1.1667rem; font-weight: 700; line-height: 1.6667rem; color: #562BD1; margin-bottom: 1.3333rem;}
+#container.inquiry .radio-item .radio { display: flex; align-items: center; width: 50%; margin-bottom: 1.3333rem;}
+#container.inquiry .radio-item .radio input[type="radio"] { display: none;}
+#container.inquiry .radio-item .radio label { display: flex; align-items: center; position: relative; font-size: 1.1667rem; line-height: 1.6667rem; color: #666666; padding-left: 2.3333rem; cursor: pointer;}
+#container.inquiry .radio-item .radio label::before { content:""; position: absolute; top: 0; left: 0; display: block; width: 1.6667rem; height: 1.6667rem; border: 1px solid #D0D0D0; border-radius: 50%;}
+#container.inquiry .radio-item .radio label::after { content:""; position: absolute; top: 4px; left: 4px; display: block; width: 1.1667rem; height: 1.1667rem; background: #FFFFFF;border-radius:50%;}
+#container.inquiry .radio-item .radio input[type="radio"]:checked + label::before { border-color: #562BD1;}
+#container.inquiry .radio-item .radio input[type="radio"]:checked + label::after { background-color: #562BD1;}
+#container.inquiry .radio-item .radio input[type="radio"]:disabled + label::before,
+#container.inquiry .radio-item .radio input[type="radio"]:disabled + label::after { background: #F5F5F5;}
+#container.inquiry hr.line { border-top: 1px solid #E3E3E3; margin: 2.5rem 0;}
+#container.inquiry .check-item .title-box { flex: 0 0 100%; display: flex; align-items: center; margin-bottom: 1.3333rem;}
+#container.inquiry .check-item .title-box p { font-size: 1.1667rem; font-weight: 700; line-height: 1.6667rem; color: #404040; margin-right: auto;}
+#container.inquiry .check-item .title-box .checkbox label { font-size: 1.1667rem; line-height: 1.6667rem; color: #333333;}
+#container.inquiry .check-item .radio-item .radio:nth-child(3),
+#container.inquiry .check-item .radio-item .radio:nth-child(4) { margin-bottom: 0.4167rem;}
+#container.inquiry .check-item input[type="text"] { width: calc(100% - 5.167rem); height: 3.3333rem; font-size: 1.1667rem; line-height: 1.6667rem; color: #333333; margin-left: 0.6667rem; padding: 0 0.8333rem; background: #FFFFFF; border: 1px solid #E3E3E3; border-radius: 0.3333rem; outline: none;}
+#container.inquiry .check-item input[type="text"]::placeholder { color: #A8A8A8;}
+#container.inquiry .check-item input[type="text"]:disabled { background: #F5F5F5;}
+#container.inquiry hr.division { width: calc(100% + 3.3333rem); margin: 2.5rem 0 2.5rem -1.6667rem; border-top: 0.8333rem solid #F5F5F5;}
+#container.inquiry .write-box p.tit { font-size: 1.1667rem; font-weight: 500; line-height: 1.6667rem; color: #202020; margin-bottom: 0.6667rem;}
+#container.inquiry .write-box input { width: 100%; height: 3.75rem; font-size: 1.1667rem; line-height: 1.6667rem; color: #404040; padding: 0 1.25rem; border: 1px solid #E3E3E3; border-radius: 0.3333rem; outline: none;}
+#container.inquiry .write-box input::placeholder { color: #A8A8A8;}
+#container.inquiry .write-box .write { width: 100%; height: 19.167rem; border: 1px solid #E3E3E3;}
+#container.inquiry .write-box .write textarea { width: 100%; height: 100%; font-size: 1.1667rem; line-height: 1.6667rem; color: #404040; padding: 1.25rem; border: none; outline: none;}
+#container.inquiry .write-box .upload .img-box { display: flex; align-items: center; flex-wrap: wrap;}
+#container.inquiry .write-box .upload .img-box .img { position: relative; width: 4.833; height: 4.833; border: 1px solid #E3E3E3; margin-right: 1.75rem; margin-bottom: 0.8333rem;}
+#container.inquiry .write-box .upload .img-box .img img { width: 100%; height: 100%;}
+#container.inquiry .write-box .upload .img-box .img .del-btn { position: absolute; top: -0.75rem; right: -0.9167rem; width: 2.3333rem; height: 2.3333rem;}
+#container.inquiry .write-box .upload .btn-box { display: flex; align-items: center;}
+#container.inquiry .write-box .upload .btn-box p { font-size: 1.0833rem; line-height: 1.5833rem; color: #A8A8A8;}
+#container.inquiry .write-box .upload .btn-box p span { color: #E02E2E;}
+#container.inquiry .write-box .upload .btn-box .file-box { margin-left: auto;}
+#container.inquiry .write-box .upload .btn-box .file-box label { display: flex; align-items: center; justify-content: center; height: 3.3333rem; padding: 0 1.6667rem; font-size: 1.1667rem; font-weight: 700; line-height: 1.6667rem; color: #FFFFFF; background: #00C2B6; border-radius: 0.3333rem;}
+#container.inquiry .write-box .upload .btn-box .file-box input { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; border: none;}
+
+
+
 
 #container.agree { padding: 1.6667rem 1.6667rem 2.0833rem;}
 #container.agree p { font-size: 1.1667rem; line-height: 1.8333rem; color: #404040;}
